# mock-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.bmad-core/: install-manifest.yaml
.github/: copilot-instructions.md
.github/agents/: compute-diagnostics.agent.md  ticket-writer.agent.md
.github/instructions/: kql.instructions.md
.github/workflows/: ci.yml
docs/: architecture.md  brief.md  facilitator-guide.md  instructor-guide.md  prd.md  scenario-coverage.md  scenario-index.md  student-handbook.md
docs/architecture/: checklist-results-report.md  coding-standards.md  components.md  core-workflows.md  data-models.md  database-schema.md  error-handling-strategy.md  external-apis.md  high-level-architecture.md  index.md  infrastructure-and-deployment.md  introduction.md  next-steps.md  security.md  source-tree.md  tech-stack.md  test-strategy-and-standards.md  workshop-integration-epic-5.md
docs/prd/: checklist-results-report.md  epic-1-foundation-connectable-mcp-server.md  epic-2-mock-data-model-ticket-tools.md  epic-3-kusto-telemetry-tools-correlation.md  epic-4-full-scenario-library-guided-prompts.md  epic-5-workshop-integration.md  epic-list.md  goals-and-background-context.md  index.md  next-steps.md  requirements.md  technical-assumptions.md
docs/process/: story-workflow.md
docs/stories/: 1.1.project-scaffold-health-tool.md  1.2.network-transport-mode.md  1.3.configuration-and-run-docs.md  2.1.scenario-data-model-loader.md  2.2.ticket-retrieval-tools.md  (+16 more)
scripts/: author_seed_scenarios.py  coverage_report.py  scenario_index.py
(+218 files in other folders)
