[project]
name = "contoso-support-mcp"
version = "0.1.0"
description = "Mock Contoso Support Ticketing MCP Server for classroom AI-agent labs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.9",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "uvicorn>=0.30",
]

[project.scripts]
contoso-support-mcp = "contoso_support_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/contoso_support_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Authoring scripts carry long curated prose strings in data tables.
"scripts/*" = ["E501"]
